--- a/style.css
+++ b/style.css
@@ -48,6 +48,12 @@
     color: #95FFD4;
 }
 
+.imagem  {
+    justify-content: center;
+    width: auto;
+    height: auto;
+}
+
 body a {
     text-decoration: none;
     color: #000;
@@ -57,6 +63,14 @@ body a {
     padding: 24px;
 }
 
+@media (max-width: 769) {
+    .formulario {
+        flex-direction: column;
+        height: 700px;
+        width: 500xpx;
+    }
+}
+
 @media (max-width: 576px) {
     .formulario {
         flex-direction: column;
@@ -64,3 +78,4 @@ body a {
         width: 500xpx;
     }
 }
+
